[gd_scene load_steps=8 format=3 uid="uid://2tkwblffe7mk"]

[ext_resource type="Script" uid="uid://2v6vewv0rb44" path="res://Platooning/platoon_control.gd" id="1_86ka2"]
[ext_resource type="PackedScene" uid="uid://4upow5w6yesc" path="res://Platooning/communicator.tscn" id="2_7y4yk"]
[ext_resource type="PackedScene" uid="uid://cxa4n46xuic4k" path="res://TankWars/Memorizers/obstacle_map.tscn" id="2_dfafb"]
[ext_resource type="PackedScene" uid="uid://b6ykprim2mi83" path="res://Platooning/TacticalDeciders/explore_control.tscn" id="3_nrt4k"]
[ext_resource type="PackedScene" uid="uid://dj0mkp2c1p2yt" path="res://Platooning/StrategicDeciders/platoon_control_strategy.tscn" id="4_nrt4k"]
[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="6_ivi7g"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="7_6l5dj"]

[node name="PlatoonControl" type="Node2D"]
script = ExtResource("1_86ka2")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_ivi7g")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="MapInit" type="Node" parent="StateChart"]
script = ExtResource("7_6l5dj")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="Communicator" parent="." instance=ExtResource("2_7y4yk")]

[node name="ExploreControl" parent="." instance=ExtResource("3_nrt4k")]

[node name="ObstacleMap" parent="." instance=ExtResource("2_dfafb")]

[node name="PlatoonControlStrategy" parent="." instance=ExtResource("4_nrt4k")]

[node name="team" type="Node2D" parent="."]

[connection signal="state_entered" from="StateChart/MapInit" to="." method="_on_map_init_state_entered"]
